# loqa-meetings

./: Cargo.toml  LICENSE  README.md  TESTING.md  build.rs
config/: loqa-meetings.yaml
docs/: audio-mixing.md
examples/: README.md  live_recording.rs  live_transcription.rs  multichannel_test.rs  nats_test.rs  record_chunks.rs  test_multichannel.rs  test_nats_integration.rs  test_recording.rs
src/: config.rs  lib.rs  main.rs
src/audio/: backend.rs  chunk.rs  file.rs  macos.rs  mixer.rs  mod.rs
src/http/: handlers.rs  mod.rs  routes.rs  state.rs
src/nats/: client.rs  messages.rs  mod.rs
src/recording/: mod.rs  session.rs
src/screencapture/: bridge.swift  mod.rs
src/session/: config.rs  mod.rs  session.rs  stats.rs
tests/: audio_backend_tests.rs  audio_file_tests.rs  chunked_recording_tests.rs  nats_tests.rs
