[package]
name = "loqa-meetings"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["all"] }  # Multi-format audio decoder (M4A, MP3, WAV, FLAC, OGG)
hound = "3.5"  # WAV file encoding (for chunked recording)
async-trait = "0.1"  # Async trait support
clap = { version = "4", features = ["derive"] }
config = "0.13"
async-nats = "0.33"  # NATS client for pub/sub messaging
base64 = "0.21"  # For encoding PCM audio bytes
chrono = { version = "0.4", features = ["serde"] }  # Timestamps
futures = "0.3"  # Stream utilities

[dev-dependencies]
shellexpand = "3.1"
tempfile = "3"
